# Hybrid_HMD_Tracking_RS

./: CMakeLists.txt  LICENSE.txt  README.md  build.sh  clean.sh  replicability_stamp.sh
errors_data/: plot.sh  plot_kernel.sh
scripts/: calibration.sh  plot.sh  plot_r1.sh  plot_r2.sh  plot_r2_alpha.sh  run_all_errors2.sh
src/: complementary_tracking.cpp  complementary_tracking.h  constrained_complementary_tracking.cpp  constrained_complementary_tracking.h  directed_complementary_tracking.cpp  directed_complementary_tracking.h  double_exponential_smoothing.cpp  double_exponential_smoothing.h  ekf_pose3_tracker.cpp  ekf_pose3_tracker.h  exponential_smoothing.cpp  exponential_smoothing.h  kalman_tracking.cpp  kalman_tracking.h  kalman_tracking_constrained.cpp  kalman_tracking_constrained.h  kalman_tracking_wrapper.cpp  kalman_tracking_wrapper.h  motive_first_tracking.h  oculus_first_tracking.h  oculus_original_tracking.cpp  oculus_original_tracking.h  particle_filter.cpp  particle_filter.h  statistics_tracker.cpp  statistics_tracker.h  tracking_commons.cpp  tracking_commons.h  tracking_compute_stats.cpp  tracking_interface.h  tracking_library.cpp  tracking_library.h  tracking_parser.cpp  tracking_parser.h  tracking_parser_compute_errors.cpp  tracking_parser_extract_matrices.cpp  tracking_parser_get_sequence.cpp  tracking_parser_library.cpp  tracking_parser_library.h  tracking_parser_matrix_extract_translation.cpp  (+3 more)
traj_test_new/elab/: compute_sign_th.sh  fit_all_sigmoids.sh  fit_sigmoid.sh  parse_all.sh  plot_cubi.sh  plot_prismi.sh
